--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://bcaf43e192f5ce:cc5e7368@us-cdbr-east-05.cleardb.net/heroku_fd68bb9dc7fd3fc?reconnect=true
+spring.datasource.url=jdbc:mysql://bcaf43e192f5ce:cc5e7368@us-cdbr-east-05.cleardb.net/heroku_fd68bb9dc7fd3fc?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
